// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput should render with default styles 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

<input
    checked={false}
    className="circuit-0"
    disabled={false}
    id={undefined}
    name={undefined}
    type="radio"
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  box-shadow: 0 0 0 1px rgba(102,113,123,0.02), 0 0 1px 0 rgba(102,113,123,0.06), 0 2px 2px 0 rgba(102,113,123,0.06);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 100%;
  content: '';
  display: block;
  height: 16px;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  background-color: #3388FF;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  height: 8px;
  width: 8px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  visibility: hidden;
  -webkit-transition: -webkit-transform 0.05s ease-in,visibility 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,visibility 0.05s ease-in;
  transition: transform 0.05s ease-in,visibility 0.05s ease-in;
}

<label
    checked={false}
    className="circuit-0"
    disabled={false}
    htmlFor={undefined}
    onClick={[Function]}
  />,
]
`;

exports[`RadioInput should render with disabled styles 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

<input
    checked={false}
    className="circuit-0"
    disabled={true}
    id={undefined}
    name={undefined}
    type="radio"
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
  opacity: 0.5;
  pointer-events: none;
}

.circuit-0::before {
  box-shadow: 0 0 0 1px rgba(102,113,123,0.02), 0 0 1px 0 rgba(102,113,123,0.06), 0 2px 2px 0 rgba(102,113,123,0.06);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 100%;
  content: '';
  display: block;
  height: 16px;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  background-color: #3388FF;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  height: 8px;
  width: 8px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  visibility: hidden;
  -webkit-transition: -webkit-transform 0.05s ease-in,visibility 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,visibility 0.05s ease-in;
  transition: transform 0.05s ease-in,visibility 0.05s ease-in;
}

.circuit-0::before {
  border-color: #9DA7B1;
}

.circuit-0::after {
  background-color: #9DA7B1;
}

<label
    checked={false}
    className="circuit-0"
    disabled={true}
    htmlFor={undefined}
    onClick={[Function]}
  />,
]
`;

exports[`RadioInput should render with invalid styles 1`] = `
Array [
  .circuit-0 {
  border: 0px;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  border-width: 2px;
  border-color: #3388FF;
}

<input
    checked={false}
    className="circuit-0"
    disabled={false}
    id={undefined}
    name={undefined}
    type="radio"
  />,
  .circuit-0 {
  color: #5C656F;
  padding-left: 24px;
  position: relative;
}

.circuit-0::before {
  box-shadow: 0 0 0 1px rgba(102,113,123,0.02), 0 0 1px 0 rgba(102,113,123,0.06), 0 2px 2px 0 rgba(102,113,123,0.06);
  background-color: #FFFFFF;
  border: 1px solid #9DA7B1;
  border-radius: 100%;
  content: '';
  display: block;
  height: 16px;
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 16px;
  -webkit-transition: border 0.05s ease-in;
  transition: border 0.05s ease-in;
}

.circuit-0::after {
  background-color: #3388FF;
  border-radius: 100%;
  content: '';
  display: block;
  position: absolute;
  top: 50%;
  left: 4px;
  height: 8px;
  width: 8px;
  -webkit-transform: translateY(-50%) scale(0,0);
  -ms-transform: translateY(-50%) scale(0,0);
  transform: translateY(-50%) scale(0,0);
  visibility: hidden;
  -webkit-transition: -webkit-transform 0.05s ease-in,visibility 0.05s ease-in;
  -webkit-transition: transform 0.05s ease-in,visibility 0.05s ease-in;
  transition: transform 0.05s ease-in,visibility 0.05s ease-in;
}

.circuit-0:not(:focus)::before {
  border-color: #FF7559;
}

.circuit-0:not(:focus)::after {
  background-color: #FF7559;
}

<label
    checked={false}
    className="circuit-0"
    disabled={false}
    htmlFor={undefined}
    onClick={[Function]}
  />,
]
`;
